# fiducia-routing.rs

./: .cli-flags.toml  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  shell
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  cli-flags.yml  deploy-test.yml  docker.yml
.nix/: README.md  flake.nix
scripts/: with-flags2env.sh
src/: README.md  lib.rs
