# Cargo manifest for the fiducia-routing crate (library + fiducia-region binary).
# Depends on fiducia-interfaces via a local path; CI/in-pod builds swap this for a
# git dep (see README).
[package]
name = "fiducia-routing"
version = "0.1.0"
edition = "2021"
description = "Shared key→shard routing for fiducia.cloud — the single source of truth for the hash + shard_for, so every component agrees where a key lives."

[dependencies]
fiducia-interfaces = { path = "../fiducia-interfaces/generated/rust" }
